--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 [type="month"], [type="search"], [type="tel"], [type="time"],
 [type="week"], [multiple], textarea, select {
   border-radius: 0.375rem;
-  padding: 0.5rem 0.75rem;
+  /* padding: 0.5rem 0.75rem; */
 }
 
 [type="text"]:focus, [type="email"]:focus, [type="url"]:focus, [type="password"]:focus,
